fixed banner spacing and button

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,6 @@ body{
     height: 300px;
     align-items: center;
     justify-content: center;
-    
 }
 
 .banner-container{
@@ -132,6 +131,15 @@ body{
     background-color: #3882F6;
     color: white;
     border: 2px solid 3882F6;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.signup-banner button{
+    background-color: #3882F6;
+    color: white;
+    border: 1px solid white;
     border-radius: 4px;
 }
 .bannertext{
